# eBook-Packager

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BookInputForm.tsx  BookList.tsx  BookListItem.tsx  Header.tsx  icons.tsx
src/services/: apiService.ts
